// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breadcrumbs renders breadcrumbs: single cluster page 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-label="Breadcrumb"
      class="pf-v5-c-breadcrumb"
      data-ouia-component-id="detail"
      data-ouia-component-type="PF5/Breadcrumb"
      data-ouia-safe="true"
      data-testid="breadcrumb-item"
    >
      <ol
        class="pf-v5-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v5-c-breadcrumb__item breadcrumb-item"
        >
          <a
            href="/"
          >
            Advisor clusters
          </a>
        </li>
        <li
          class="pf-v5-c-breadcrumb__item breadcrumb-item"
        >
          <span
            class="pf-v5-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          Cluster with issues
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs renders breadcrumbs: single rec page 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-label="Breadcrumb"
      class="pf-v5-c-breadcrumb"
      data-ouia-component-id="detail"
      data-ouia-component-type="PF5/Breadcrumb"
      data-ouia-safe="true"
      data-testid="breadcrumb-item"
    >
      <ol
        class="pf-v5-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v5-c-breadcrumb__item breadcrumb-item"
        >
          <a
            href="/"
          >
            Advisor recommendations
          </a>
        </li>
        <li
          class="pf-v5-c-breadcrumb__item breadcrumb-item"
        >
          <span
            class="pf-v5-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          Cluster update will fail when default SCC gets changed
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`breadcrumbs renders breadcrumbs: single workloads details page 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-label="Breadcrumb"
      class="pf-v5-c-breadcrumb"
      data-ouia-component-id="detail"
      data-ouia-component-type="PF5/Breadcrumb"
      data-ouia-safe="true"
      data-testid="breadcrumb-item"
    >
      <ol
        class="pf-v5-c-breadcrumb__list"
        role="list"
      >
        <li
          class="pf-v5-c-breadcrumb__item breadcrumb-item"
        >
          <a
            href="/"
          >
            Advisor workloads
          </a>
        </li>
        <li
          class="pf-v5-c-breadcrumb__item breadcrumb-item"
        >
          <span
            class="pf-v5-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          Cluster name 000000001 | Namespace name c1-94f525441c75
        </li>
      </ol>
    </nav>
  </div>
</DocumentFragment>
`;
